[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gc_paper"
requires-python = ">=3.8"
dependencies = ["tensorflow","wandb", "tf_keras", "tensorflow_probability", "gym<0.25", "pybullet"]
version = "0.1"

[project.scripts]
gc-ppo = "GC_PPO:main"

